<resources>
    <string name="app_name">shamsaha</string>
    <string name="welcome_heading">Amplify your potential</string>
    <string name="welcome_string_1">Advocating for women\'s empowerment and protection throughout the Middle East.</string>
    <string name="welcome_string_2">Break the silence of voilence and get help today. confidential 24/7 women\'s crisis support.</string>
    <string name="contect_now">Contact now</string>
    <string name="home">Home</string>
    <string name="about_shamsaha">About Shamsaha</string>
    <string name="resource">Resources</string>
    <string name="per_country">Per Country</string>
    <string name="survivor_support_tools">Survivor Support Tools</string>
    <string name="survivor_support_tools2">Survivor Support \nTools</string>
    <string name="events_media"><![CDATA[Events & Media]]></string>
    <string name="contect_us">Contact Us</string>
    <string name="lock_app">Lock App</string>
    <string name="chat_now">Chat Now</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="terms_condition"><![CDATA[Terms & conditions]]></string>
    <string name="get_envolved">Get Involved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volunteer">Volunteer</string>
    <string name="sponser">Sponsor</string>
    <string name="work_with_us">Work With Us</string>
    <string name="resources">Resources</string>
    <string name="personal_details">Personal Details</string>
    <string name="email">Email</string>
    <string name="create_pin">Create Pin</string>
    <string name="enter_foru_digit_pin_number">Enter 4 digit PIN Number</string>
    <string name="re_enter_four_digit">Re-Enter your PIN Number</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="helpline">Helpline</string>
    <string name="english">English:</string>
    <string name="arabic">Arabic:</string>
    <string name="dummy_string">The Constitution of India (IAST: Bhāratīya Saṃvidhāna) is the supreme law of India.[3][4] The document lays down the framework that demarcates fundamental political code, structure, procedures, powers, and duties of government institutions and sets out fundamental rights, directive principles, and the duties of citizens. It is the longest written national constitution in the world.</string>
    <string name="amplify">Amplify</string>
    <string name="your">your</string>
    <string name="potential">potential</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_vol_home">VolHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_profile">My Profile</string>
    <string name="my_shift">My Shift</string>
    <string name="vol_calander">Volunteer Calender</string>
    <string name="shift_swap_request">Shift Swap Requests</string>
    <string name="client_service">Client Services</string>
    <string name="on_duity_back">On-Duty Back-Up</string>
    <string name="privide_back_up">Provide Back-Up</string>
    <string name="case_report">Case Report</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="language_back_up">Language Back-Up</string>
    <string name="in_person_back_up">In-Person Back-Up</string>
    <string name="vol_resource">Resources</string>
    <string name="vol_event_media"><![CDATA[Events & Media]]></string>
    <string name="manager_on_duity">"Manager on "</string>
    <string name="manager_on_duitdy">Manager on Duity (MoD)</string>
    <string name="announcements">Announcements:</string>
    <string name="contact">Contacts</string>
    <string name="address">Address</string>
    <string name="cpr_passport_number">CPR/ Passport No.</string>
    <string name="language">Language</string>
    <string name="official">Official</string>
    <string name="date">Date</string>
    <string name="joining_date">Joining Date</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone">Phone</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="please_enter_your_whatsapp_number">Please enter your whatsapp number</string>
    <string name="dob">Date of Birth</string>
    <string name="chat">Chat</string>
    <string name="english1">English</string>
    <string name="arbic">عربي</string>
    <string name="internet_call">Internet Call</string>
    <string name="cellular_call">Cellular Call</string>
    <string name="talk_now">Talk now</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_over_18_year">Are you over 18 years old?</string>
    <string name="survivor">Survivor</string>
    <string name="phone_number">Phone Number</string>
    <string name="is_it_safe_for_us_to_call_you_back">Is it safe for us to call you back, if needed?</string>
    <string name="from_what_country_you_are_calling">From what country you are calling?</string>
    <string name="what_type_of_issue_you_are_facing">What type of issue or abuse are you facing?</string>
    <string name="select_topic">Please select</string>
    <string name="choose_language">Choose Language</string>
    <string name="done">Done</string>
    <string name="arbic1">Arbic</string>
    <string name="become_crisis_advocate">Become a crisis advocate</string>
    <string name="apply">Apply</string>
    <string name="other_opportunity">Other opportunities</string>
    <string name="criss_advocate">Crisis Advocate</string>
    <string name="individual">INDIVIDUAL</string>
    <string name="corporate">CORPORATE</string>
    <string name="raw_string">" Whether it be bribery, getting a desired day in court, or any sort of unjust practice to sway the results of a trial, India’s judicial system remains as one riddled with corruption from many sides. Lawyers, administrative staff, judges, defendants, and more have used these practices to sway countless cases, and exist at all levels of the court system. While the Indian Supreme Court is generally reserved for the cases of highest importance or urgency, because of petitions and the implementation of bribery, the public or individuals outside the Supreme Court have been able to decide what cases go to the highest court of law in India."</string>
    <string name="medical_quantity">Medical Quantity</string>
    <string name="medical">Medical</string>
    <string name="bhd">BHD</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="pay_now">Pay Now</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount</string>
    <string name="company">Company</string>
    <string name="intrest_inquiry">Interests/ inquiry</string>
    <string name="upload_cv">Upload CV</string>
    <string name="cancel">Cancel</string>
    <string name="hospital">Hospital</string>
    <string name="indentifying_abouse">Identifying \nabuse</string>
    <string name="welcome_to_the_shamsha_application">Welcome to the Shamsaha application!</string>
    <string name="free">Free</string>
    <string name="view_event">View Event</string>
    <string name="description">Description</string>
    <string name="short_form">Short Form</string>
    <string name="long_form">Long Form</string>
    <string name="case_id">Case ID:</string>
    <string name="language_support">Language Support</string>
    <string name="send">Send</string>
    <string name="backup_support">Backup Support</string>
    <string name="supporet_for">Support For:</string>
    <string name="outstanding_request">Outstanding Requests</string>
    <string name="shift_request_list">Shift Request List</string>
    <string name="service">Service</string>
    <string name="shift_log">Shift Log</string>
    <string name="calendar_mode">Calendar \nMode</string>
    <string name="list_mode">List \nMode</string>
    <string name="open_shift">Open Shift</string>
    <string name="filters">Filters</string>
    <string name="all_shift">All Shifts</string>
    <string name="day_shift">Day shifts</string>
    <string name="night_shift">Night Shifts</string>
    <string name="my_shift_slashn">My\nShift</string>
    <string name="open_shift_slashn">Open\nShifts</string>
    <string name="shelf_registration">Sift Registration</string>
    <string name="shift">Shift</string>
    <string name="job">Job</string>
    <string name="accept">Accept</string>
    <string name="change_password">Change Password</string>
    <string name="enable_biometric">Enable Biometric</string>
    <string name="old_password">Old Password</string>
    <string name="past_report">Past Report</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="upcoming">Upcoming Chat</string>
    <string name="previous">Case Report</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="primary_language">Primary Language</string>
    <string name="secondary_language">Secondary Language</string>
    <string name="country_of_location">Country of Location</string>
    <string name="case_taken_level">Case Taken/Level</string>
    <string name="id">Id</string>
    <string name="national_id">National Id</string>
    <string name="vol_id">Volunteer Id</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="title">Title</string>
    <string name="please_enter_title">Please enter title.</string>
    <string name="please_enter_description">Please enter description.</string>
    <string name="alert">Alert</string>
    <string name="pending_alert">Pending Alert</string>
    <string name="record_submitted_successfully">Your Record was submitted successfully. It will appear after admin approval.</string>
    <string name="past_case">Past Cases</string>
    <string name="advocacy_level">Advocacy Levels</string>
    <string name="beginner">Beginner</string>
    <string name="reporting_error">Reporting Errors!</string>
    <string name="admin_notes">Admin Notes</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="incoming_chat">Incoming Chat</string>
    <string name="disclaimer">Disclaimer- Data is not being collected and identities are confidential. <font color='#5E5783'>TermsConditon</font></string>
    <string name="disclaimer2">We take your privacy seriously and do not collect any data without your explicit consent. All information provided by our users is kept strictly confidential and is never shared with third parties.</string>
    <string name="git_it">Got It</string>
</resources>