<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:background="@drawable/custom_upper_radious"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           >

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/close"
           android:layout_width="25dp"
           android:layout_height="25dp"
           android:layout_alignParentRight="true"
           android:src="@drawable/ic_baseline_close_24"
           ></androidx.appcompat.widget.AppCompatImageView>

       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/contect_us"
           android:gravity="center"

           android:textSize="@dimen/heading_text_20sp"
           android:fontFamily="@font/avenir_heavy"

           ></androidx.appcompat.widget.AppCompatTextView>

       </RelativeLayout>
       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/raw_string"
           android:gravity="center"
           android:textSize="@dimen/normal_text_12sp"
           android:fontFamily="@font/avenir_heavy"
           android:layout_marginTop="10dp"
           ></androidx.appcompat.widget.AppCompatTextView>
       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/raw_string"
           android:gravity="center"
           android:textSize="@dimen/normal_text_12sp"
           android:fontFamily="@font/avenir_heavy"
           android:layout_marginTop="10dp"
           ></androidx.appcompat.widget.AppCompatTextView>


       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:fitsSystemWindows="false"
               android:background="@drawable/custom_white_input_edit_text"
               android:hint="@string/name"
               ></com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:fitsSystemWindows="false"
               android:background="@drawable/custom_white_input_edit_text"
               android:hint="@string/phone_number"
               ></com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/address"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:fitsSystemWindows="false"
               android:background="@drawable/custom_white_input_edit_text"
               android:hint="@string/address"
               ></com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
               android:fitsSystemWindows="false"
               android:background="@drawable/custom_white_input_edit_text"
               android:hint="@string/email"
               ></com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/intrest_inquiry"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"
               android:fitsSystemWindows="false"
               android:background="@drawable/custom_white_input_edit_text"
               android:hint="@string/intrest_inquiry"
               ></com.google.android.material.textfield.TextInputEditText>


           <androidx.appcompat.widget.AppCompatButton
               android:layout_width="wrap_content"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               android:layout_height="36dp"
               android:layout_marginTop="10dp"
               android:background="@drawable/custom_pink_corner_bg"
               android:text="@string/upload_cv"
               android:textColor="@color/white"
               android:fontFamily="@font/avenir_heavy"
               ></androidx.appcompat.widget.AppCompatButton>
       </com.google.android.material.textfield.TextInputLayout>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="20dp"


           >

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/cancel"
               android:layout_width="wrap_content"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               android:layout_height="36dp"
               android:layout_marginTop="10dp"
               android:background="@drawable/custom_pink_corner_bg"
               android:text="@string/cancel"
               android:textColor="@color/white"
               android:fontFamily="@font/avenir_heavy"
               app:layout_constraintEnd_toStartOf="@+id/submit"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"

               ></androidx.appcompat.widget.AppCompatButton>

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/submit"
               android:layout_width="wrap_content"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               android:layout_height="36dp"
               android:layout_marginTop="10dp"
               android:background="@drawable/custom_pink_corner_bg"
               android:text="@string/submit"
               android:textColor="@color/white"
               android:fontFamily="@font/avenir_heavy"
                app:layout_constraintStart_toEndOf="@+id/cancel"
              app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"

               ></androidx.appcompat.widget.AppCompatButton>

       </androidx.constraintlayout.widget.ConstraintLayout>


   </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.core.widget.NestedScrollView>